tests/sksl/errors/MismatchedNumbers.glsl
### Compilation failed:

error: 16: type mismatch: '=' cannot operate on 'int', 'float'
error: 17: type mismatch: '=' cannot operate on 'int', 'float'
error: 18: type mismatch: '=' cannot operate on 'float', 'int'
error: 19: type mismatch: '+' cannot operate on 'int', 'float'
error: 20: type mismatch: '-' cannot operate on 'int', 'float'
error: 21: type mismatch: '*' cannot operate on 'int', 'float'
error: 22: type mismatch: '/' cannot operate on 'int', 'float'
error: 23: type mismatch: '+' cannot operate on 'float', 'int'
error: 24: type mismatch: '-' cannot operate on 'float', 'int'
error: 25: type mismatch: '*' cannot operate on 'float', 'int'
error: 26: type mismatch: '/' cannot operate on 'float', 'int'
error: 27: type mismatch: '+' cannot operate on 'int', 'float'
error: 28: type mismatch: '-' cannot operate on 'int', 'float'
error: 29: type mismatch: '*' cannot operate on 'int', 'float'
error: 30: type mismatch: '/' cannot operate on 'int', 'float'
error: 31: type mismatch: '+' cannot operate on 'float', 'int'
error: 32: type mismatch: '-' cannot operate on 'float', 'int'
error: 33: type mismatch: '*' cannot operate on 'float', 'int'
error: 34: type mismatch: '/' cannot operate on 'float', 'int'
error: 35: unknown identifier 'u'
error: 36: unknown identifier 'u'
error: 37: unknown identifier 'u'
error: 38: unknown identifier 'u'
error: 39: unknown identifier 'u'
error: 40: unknown identifier 'u'
error: 41: unknown identifier 'u'
error: 42: unknown identifier 'u'
27 errors
